; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_pmap_x86_common.c_x86_filter_TLB_coherency_interrupts.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_pmap_x86_common.c_x86_filter_TLB_coherency_interrupts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @x86_filter_TLB_coherency_interrupts(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = call i64 (...) @ml_get_interrupts_enabled()
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %1
  %6 = call i64 (...) @get_preemption_level()
  %7 = icmp ne i64 %6, 0
  br label %8

8:                                                ; preds = %5, %1
  %9 = phi i1 [ true, %1 ], [ %7, %5 ]
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load i64, i64* %2, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %8
  %15 = call i32 (...) @CPU_CR3_MARK_INACTIVE()
  br label %26

16:                                               ; preds = %8
  %17 = call i32 (...) @CPU_CR3_MARK_ACTIVE()
  %18 = call i32 (...) @mfence()
  %19 = call %struct.TYPE_2__* (...) @current_cpu_datap()
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %16
  %24 = call i32 (...) @process_pmap_updates()
  br label %25

25:                                               ; preds = %23, %16
  br label %26

26:                                               ; preds = %25, %14
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @ml_get_interrupts_enabled(...) #1

declare dso_local i64 @get_preemption_level(...) #1

declare dso_local i32 @CPU_CR3_MARK_INACTIVE(...) #1

declare dso_local i32 @CPU_CR3_MARK_ACTIVE(...) #1

declare dso_local i32 @mfence(...) #1

declare dso_local %struct.TYPE_2__* @current_cpu_datap(...) #1

declare dso_local i32 @process_pmap_updates(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
